tests/NormalTests/paczka1/small_fuzzy/58345336.err
Error in line 2: rQ7bdsiIK S356 70,4
Error in line 7: YUh A807 14,4
